; ModuleID = '/home/carl/AnghaBench/postgres/src/common/extr_d2s.c_pow5Factor.c'
source_filename = "/home/carl/AnghaBench/postgres/src/common/extr_d2s.c_pow5Factor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32)* @pow5Factor to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @pow5Factor(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  store i32 %0, i32* %2, align 4
  store i64 0, i64* %3, align 8
  br label %6

6:                                                ; preds = %21, %1
  %7 = load i32, i32* %2, align 4
  %8 = icmp ne i32 %7, 0
  %9 = zext i1 %8 to i32
  %10 = call i32 @Assert(i32 %9)
  %11 = load i32, i32* %2, align 4
  %12 = call i32 @div5(i32 %11)
  store i32 %12, i32* %4, align 4
  %13 = load i32, i32* %2, align 4
  %14 = load i32, i32* %4, align 4
  %15 = mul nsw i32 5, %14
  %16 = sub nsw i32 %13, %15
  %17 = sext i32 %16 to i64
  store i64 %17, i64* %5, align 8
  %18 = load i64, i64* %5, align 8
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %21

20:                                               ; preds = %6
  br label %25

21:                                               ; preds = %6
  %22 = load i32, i32* %4, align 4
  store i32 %22, i32* %2, align 4
  %23 = load i64, i64* %3, align 8
  %24 = add nsw i64 %23, 1
  store i64 %24, i64* %3, align 8
  br label %6

25:                                               ; preds = %20
  %26 = load i64, i64* %3, align 8
  ret i64 %26
}

declare dso_local i32 @Assert(i32) #1

declare dso_local i32 @div5(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
